validate access right submitAssessmentResult